# notification-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py  requirements.txt
app/api/: routes.py
app/db/: ops.py
